# symba-t46-app

./: .env.example  .gitignore  BOOTSTRAP_new_chat_methodology_redo.md  CLAUDE.md  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  db.py  main.py
backend/app/_legacy/: README.md  __init__.py  engine.py  models_domain.py
backend/app/auth/: __init__.py  deps.py  security.py
backend/app/domain/: __init__.py  case_state.py  engine.py  enums.py  models.py  models_domain.py  scoring.py  validators.py
backend/app/engine/: __init__.py  activate.py  dcf_compose.py  l0_compute.py  l1_blocks.py  l2_validate.py  l3_report.py  loader.py  pathway.py  pipeline.py  predicate.py
backend/app/models/: __init__.py  answer.py  case_record.py  case_scoring.py  pathway_resolution.py  session.py  user.py
backend/app/routers/: __init__.py  auth.py  cases.py  dcf.py  decision_engine.py  health.py  pipeline.py  public.py  scoring.py  sessions.py
backend/app/schemas/: __init__.py  cir_output_fields.json  computed_fields.json  cross_method_rules.json  dcf_schema.json  pathway_schemas.py  phase1_nodes.json  sector_overlays.json  system_fields.json
backend/app/services/: dcf_docx.py  dcf_excel.py  naming.py  reports.py
backend/coordination/: dcf_mandates_census.json  dcf_mandates_census.md  field_gaps.md  validation_report.json  validation_report.md
backend/scripts/: generate_validation_reports.py  migrate_add_case_slug.py  validate_dcf_schema.py  validate_phase1_artifacts.py
backend/tests/: conftest.py  test_12_papers_regression.py  test_activate.py  test_auth.py  test_cases_aggregate.py  test_cases_api.py  test_dcf_api.py  test_dcf_compose.py  test_dcf_docx.py  test_dcf_excel.py  test_decision_engine_api.py  test_engine.py  test_health.py  test_l0_compute.py  test_l1_blocks.py  test_l2_validate.py  test_l3_report.py  test_models.py  test_pathway.py  test_pipeline_api.py  test_predicate.py  test_scoring_api.py  test_sessions_api.py  test_smoke.py  test_validation_reports.py  test_validators.py
docs/: DEPLOY.md  (+2 more)
(+152 files in other folders)
