[project]
name = "symba-backend"
version = "0.0.1"
description = "SYMBA T4.6 IS Assessment App — backend (FastAPI)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.38.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "httpx>=0.28.0",
    "ruff>=0.13.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
# B008: FastAPI uses Depends(...) in defaults — its canonical pattern.
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately encode pathway / block IDs (LCSA-P1, BLOCK-01, RULE-04)
# in function names for traceability.
"tests/**/*.py" = ["N802", "N806"]
# One-off validation/diagnostic scripts: long log strings and unused loop vars
# are part of the script style; not worth refactoring for lint compliance.
"scripts/**/*.py" = ["E501", "B007", "F541"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
